# SS25_GenAi-Sven_Zimmer

./: .env  README.md  sql_agent.py
genai-sven-zimmer/: .gitignore  README.md  _app.py  _database.py  _systemprompt_analysis_agent.txt  _systemprompt_interpreter_agent.txt  _systemprompt_sql_agent.txt  _utils.py  agent_analysis.py  agent_sql.py  agent_whisper.py  analysis_agent.py  app.py  audio_transcriber.py  database.py  database_analysis_for_prompt.txt  database_request.py  datenbank_agent.py  db_schema_for_prompt.txt  generate_schema.py  interpretation_agent.py  interpreter_agent.py  main.py  orchestration_agent.py  pyproject.toml  sql_agent.py  sql_agent_prompt.txt  utils.py  visualization_agent.py
genai-sven-zimmer/.github/: code-style.md  copilot-instructions.md
